First pass at new invite panel, showing other ways to spread the whirled. This is only enabled in developement for now. The old invitepanel is used in production and embedded in the new one.

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -356,3 +356,14 @@
 .roomsPanel .Room .gwt-Image {
   margin: 0px; /* undo centering */
 }
+
+.share .roundBox {
+  width: 100%;
+}
+.share .MainHeaderText, .share .SubHeaderText {
+  font-size: 14px;
+  padding-left: 10px;
+}
+.share .SubHeaderText, .share .SubHeaderText a {
+  color: white;
+}
