New page for users to easily select one of our logos to put on their web sites by copying HTML code. The link is to the affiliate landing page. Linked to from the new invite friends page. Now enabled for production.

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -372,3 +372,10 @@
 .share .SubHeaderText, .share .SubHeaderText a {
   color: white;
 }
+.linkToWhirled {
+  font-size: 14px;
+}
+.linkToWhirled .LogoBox {
+  color: white;
+  text-align: center;
+}
