Added hoverActionLabel for action labels that are only underlined on hover. We can probably replace a handful of hand-coded styles with this one.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -652,6 +652,15 @@ img, embed, applet, object {
   text-decoration: underline;
 }
 
+.hoverActionLabel {
+  cursor: pointer; /* for modern browsers */
+  cursor: hand; /* for IE5 */
+}
+
+.hoverActionLabel:hover {
+  text-decoration: underline;
+}
+
 .rightLabel {
   text-align: right;
   vertical-align: top;
