Tweaks to new share panel * Wrap the text on the links page * Only use the 3 smaller graphics * Remove the blue background from logos * Select all the text in html boxes when clicked (using new utility method) so it is easier to copy-n-paste * Link to the links page from the big icon rather than "graphics" * Add some space between "add whirled graphics" line and the text box with the plain url

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -375,6 +375,9 @@
 .linkToWhirled {
   font-size: 14px;
 }
+.linkToWhirled .IntroText {
+  width: 600px;
+}
 .linkToWhirled .LogoBox {
   color: white;
   text-align: center;
