New screen /#people-friendly showing all friendly people currently online

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -235,7 +235,7 @@
   height: 17px;
 }
 
-.friendsPanel .headerBox, .searchPanel .headerBox {
+.friendsPanel .headerBox, .searchPanel .headerBox, .greetersPanel .headerBox {
   margin-left: 10px;
   border-bottom: 10px solid white;
   width: 665px;
