- Moved clients:   - world.mxml and game.mxml (unused) are in com.threerings.msoy.client now   - applets are in com.threerings.msoy.applets - All css files moved to rsrc/css
A bit more cleany coming...

--- a/rsrc/css/applets.css
+++ b/rsrc/css/applets.css
@@ -1,8 +1,8 @@
 .longThinOrangeButton {
-  disabledSkin: Embed(source="../../../../../../pages/images/ui/orange/long_thin_disabled.png");
-  downSkin: Embed(source="../../../../../../pages/images/ui/orange/long_thin.png");
-  overSkin: Embed(source="../../../../../../pages/images/ui/orange/long_thin_over.png");
-  upSkin: Embed(source="../../../../../../pages/images/ui/orange/long_thin.png");
+  disabledSkin: Embed(source="../../pages/images/ui/orange/long_thin_disabled.png");
+  downSkin: Embed(source="../../pages/images/ui/orange/long_thin.png");
+  overSkin: Embed(source="../../pages/images/ui/orange/long_thin_over.png");
+  upSkin: Embed(source="../../pages/images/ui/orange/long_thin.png");
   color: #FFFFFF;
   textRollOverColor: #FFFFFF;
   textSelectedColor: #FFFFFF;
