--- a/src/as/com/threerings/msoy/applets/remixer.mxml
+++ b/src/as/com/threerings/msoy/applets/remixer.mxml
@@ -5,10 +5,10 @@
     width="100%" height="100%"
     preloader="com.threerings.msoy.client.Preloader"
     applicationComplete="viewStack.addChild(new RemixControls(this, viewStack));">
-<mx:Style source="msoy.css"/>
-<mx:Style source="com/threerings/msoy/applets/applets.css"/>
-<mx:Style source="com/threerings/msoy/applets/image/image.css"/>
-<mx:Style source="com/threerings/msoy/applets/remixer/remixer.css"/>
+<mx:Style source="../../../rsrc/css/msoy.css"/>
+<mx:Style source="../../../rsrc/css/applets.css"/>
+<mx:Style source="../../../rsrc/css/image.css"/>
+<mx:Style source="../../../rsrc/css/remixer.css"/>
 <mx:Style>
    LinkButton {
       color: #000000;
