--- a/src/as/com/threerings/msoy/client/game.mxml
+++ b/src/as/com/threerings/msoy/client/game.mxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  Note: this is not actually used anywhere!
+-->
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" xmlns="*"
     layout="absolute" styleName="plain"
     verticalScrollPolicy="off" horizontalScrollPolicy="off"
     width="100%" height="100%"
     preloader="com.threerings.msoy.client.Preloader"
     applicationComplete="new GameClient(stage);">
-<mx:Style source="msoy.css"/>
+<mx:Style source="../../../../../../rsrc/css/msoy.css"/>
 <mx:Metadata>
     [ResourceBundle("global")]
     [ResourceBundle("general")]
