--- a/src/as/com/threerings/msoy/client/world.mxml
+++ b/src/as/com/threerings/msoy/client/world.mxml
@@ -5,7 +5,7 @@
     width="100%" height="100%"
     preloader="com.threerings.msoy.client.Preloader"
     applicationComplete="doInit();">
-<mx:Style source="msoy.css"/>
+<mx:Style source="../../../../../../rsrc/css/msoy.css"/>
 <mx:Metadata>
     [ResourceBundle("global")]
     [ResourceBundle("general")]
