Include a link to friendly people in the search controls. Removes the "Find Someone" title to make room. These changes complete the accidental changes from r13578

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -260,7 +260,7 @@
   color: white;
 }
 
-.searchControls .Tip {
+.searchControls .Tip, .searchControls .SeeGreeters a {
   font-size: 11px;
   white-space: nowrap;
   color: #B4E0F1;
