--- a/src/as/com/threerings/msoy/client/world.mxml
+++ b/src/as/com/threerings/msoy/client/world.mxml
@@ -18,6 +18,7 @@
     [ResourceBundle("prefs")]
     [ResourceBundle("world")]
     [ResourceBundle("passport")]
+    [ResourceBundle("party")]
     [ResourceBundle("studio")]
     [ResourceBundle("homepagegrid")]
 </mx:Metadata>
