Prettied up the UI a bit. Now time to start digging into integrating some fancy all-singing all-dancing GWT table implementation.

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -262,3 +262,15 @@
 .contestsEditor .contestBox-past {
   background-color: #61ABD0;
 }
+
+/* ------------------------------------
+   StatsPanel
+-------------------------------------*/
+
+.statsPanel .Controls {
+  padding: 10px;
+}
+
+.statsPanel .Controls div, .statsPanel .Controls select {
+  margin-right: 5px;
+}
