That wasn't so bad. About 3 minutes integrating and 90 minutes fucking with CSS and getting the column widths to default to something reasonable. Still need to make sorting work properly, it's currently doing lexical sorting which is not so appropriate for numbers.

--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -267,8 +267,12 @@
    StatsPanel
 -------------------------------------*/
 
+.statsPanel {
+  padding: 5px;
+}
+
 .statsPanel .Controls {
-  padding: 10px;
+  padding: 5px;
 }
 
 .statsPanel .Controls div, .statsPanel .Controls select {
