--- a/src/gwt/public/groups/groups.css
+++ b/src/gwt/public/groups/groups.css
@@ -314,20 +314,51 @@
   min-height: 100%;
 }
 
+.galaxyPanel .Title {
+  background: transparent url(/images/whirled/orange_header.png) no-repeat scroll 0 0;
+  color: #FFFFFF;
+  font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
+  font-size: 26px;
+  height: 38px;
+  margin-bottom: 10px;
+  margin-left: 7px;
+  padding-top: 3px;
+  text-align: center;
+  width: 233px;
+}
+
 .galaxyPanel .CurrentTag {
+  margin: 15px;
   float: right;
-  margin: 10px;
   color: #FFFFFF;
 }
 .galaxyPanel .CurrentTag a {
   color: #FFFFFF;
 }
 
+.galaxyPanel .IntroBlurb {
+  color: #FFFFFF;
+  padding: 0 50px 15px 15px;
+  width: 450px;
+  font-size: 13px;
+}
+.galaxyPanel .IntroBlurb a {
+  color: #FFFFFF;
+}
+
 .galaxyPanel .Search {
-  background-color: #09304D;
   float: right;
-  margin: 5px 10px 10px 0;
+  margin: 0 10px 10px 0;
   padding: 5px;
+  width: 200px;
+}
+
+.galaxyPanel .Search .SearchTitle {
+  color: #6B9FBF;
+  width: 200px;
+  padding: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
 }
 
 .galaxyPanel .Search .gwt-TextBox {
@@ -336,7 +367,7 @@
 
 .galaxyPanel .LeftColumn {
   width: 130px;
-  margin: 10px;
+  margin: 0 10px 10px 10px;
 }
 
 .galaxyPanel .MyGroupsHeader {
@@ -400,7 +431,7 @@
 
 .galaxyPanel .GroupsList .Header .TopLeft,
 .galaxyPanel .GroupsList .Header .TopRight {
-  background-color: #104C6F;
+  background-color: #19577B;
 }
 
 .galaxyPanel .GroupsList .Grid {
