--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -9,16 +9,35 @@
 -------------------------------------*/
 
 .createAccount {
-  background: url(/images/ui/gradient_dark_bg.png) repeat-x top #3283aa;
+  background: #89c6e3;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
-  width: 100%;
-  height: 100%;
-  min-height: 520px;
+  min-width: 100%;
+  min-height: 100%;
 }
 .createAccount,
 .createAccount a {
   color: #d0e6f7;
+}
+
+.createAccount .Content {
+  margin: 0 auto;
+  background: url(/images/account/create_bg.png) no-repeat;
+  width: 657px;
+  height: 508px;
+}
+
+.createAccount .Logon {
+  float: right;
+  padding: 10px;
+}
+
+.createAccount .Logon .AlreadyMember {
+  padding: 5px 15px 0 0;
+}
+
+.createAccount .Logon .actionLabel {
+  margin-left: 5px;
 }
 
 .createAccount .Intro {
@@ -29,21 +48,13 @@
   padding: 10px;
 }
 
-.createAccount .Logon {
-  float: right;
-  padding: 10px;
-}
-
-.createAccount .Logon .orangeButton {
-  margin: 5px 0 0 20px;
-}
-
-.createAccount .Logon .actionLabel {
-  margin-left: 5px;
-}
-
 .createAccount .Coins {
   margin: 0 0 20px 10px;
+}
+
+.createAccount .Promo {
+  float: right;
+  margin-right: 25px;
 }
 
 .createAccount .Label {
@@ -64,7 +75,7 @@
 }
 
 .createAccount .Tip {
-  background: url(/images/ui/tip_balloon.png) no-repeat;
+  background: url(/images/ui/tip_balloon_opaque.png) no-repeat;
   position: absolute;
   width: 250px;
   height: 55px;
