--- a/src/gwt/public/landing/landing.css
+++ b/src/gwt/public/landing/landing.css
@@ -29,15 +29,16 @@
 
 .BlueLandingPage p {
   margin: 10px 20px;
-  line-height: 15pt;
+  line-height: 20px;
 }
 
-.BlueLandingPage ul {
-  line-height: 15pt;
+.BlueLandingPage ul,
+.BlueLandingPage ol {
+  line-height: 20px;
 }
 
 .BlueLandingPage h3 {
-  font-size: 13pt;
+  font-size: 13px;
   font-weight: bold;
   font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
   margin: 25px 0 10px 0;
@@ -90,7 +91,7 @@
 
 .wideContentBox .Title,
 .wideContentBox .TitleAlt {
-  font-size: 20pt;
+  font-size: 26px;
   font-weight: bold;
   font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
   color: #ff752a;
@@ -572,7 +573,7 @@
 }
 
 .daContestWinnersPanel .Intro {
-  font-size: 15pt;
+  font-size: 20px;
   font-weight: bold;
   font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
   color: #73d4eb;
