Implemented remaining charity functionality - cashing out, allowing the user to select a charity, some additional UI changes.  Charities are also prevented from listing items in bars, or from receiving bling from the bling pool.  The regular member UI additions (selecting the charity) are only enabled for dev.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -175,6 +175,10 @@
   font-weight: bold;
 }
 
+.editAccount .charityList {
+  width: 300px;
+}
+
 /* ------------------------------------
    ROOMS PAGE
 -------------------------------------*/
