--- a/src/gwt/public/adminz/adminz.css
+++ b/src/gwt/public/adminz/adminz.css
@@ -128,6 +128,10 @@
   white-space: nowrap;
 }
 
+.CharityDescription {
+  width: 400px;
+}
+
 /* ------------------------------------
    A/B TESTS
 -------------------------------------*/
@@ -177,7 +181,6 @@
 .cashOutWidget {
   padding: 5px 0px;
   width: 100%;
-  height: 89px;
   font-size: 10pt;
 }
 
@@ -222,6 +225,14 @@
   background-image: url(/images/profile/remove.png);
   width: 17px;
   height: 17px;
+}
+
+.requestedCashOutWidget {
+  height: 89px;
+}
+
+.charityCashOutWidget {
+  height: 60px;
 }
 
 /** PromotionEditor */
