* Some refactorings from feedback * Changed how users select a charity.  Rather than a drop-down, they can click a radio button for the charity they want, and all charities and their profile photos are displayed on the account information page.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -179,6 +179,11 @@
   width: 300px;
 }
 
+.editAccount .charityDescription {
+  width: 400px;
+  font-size: 12px;
+}
+
 /* ------------------------------------
    ROOMS PAGE
 -------------------------------------*/
