Made the font size for the charity message when buying an item from the shop smaller.

--- a/src/gwt/public/shop/shop.css
+++ b/src/gwt/public/shop/shop.css
@@ -155,6 +155,10 @@
   text-align: center;
 }
 
+.listingDetailPanel .Bought .Charity {
+  font-size: 12px;
+}
+
 .listingDetailPanel .Buy table {
   margin-left: auto;
   margin-right: auto;
